--- a/MyLocations/Base.lproj/Main.storyboard
+++ b/MyLocations/Base.lproj/Main.storyboard
@@ -144,6 +144,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="EP3-Tu-u8c" kind="push" identifier="PickCategory" id="c0d-9r-7pC"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -298,6 +301,39 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xvj-nm-kk5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1318" y="-303"/>
+        </scene>
+        <!--Category Picker View Controller-->
+        <scene sceneID="Ob1-2e-uM2">
+            <objects>
+                <tableViewController id="EP3-Tu-u8c" customClass="CategoryPickerViewController" customModule="MyLocations" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="onz-ax-0p9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="eb7-3o-FZh">
+                                <rect key="frame" x="0.0" y="92" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eb7-3o-FZh" id="tYg-9V-2Us">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="UVH-qj-DbJ" kind="unwind" identifier="PickedCategory" unwindAction="categoryPickerDidPickCategory:" id="iCA-62-Tu1"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="EP3-Tu-u8c" id="Xxg-dM-Fd2"/>
+                            <outlet property="delegate" destination="EP3-Tu-u8c" id="Qxw-r0-fqb"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="DpY-KC-qgC"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cm4-vO-DIu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="UVH-qj-DbJ" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1711" y="-303"/>
         </scene>
         <!--Second-->
         <scene sceneID="wg7-f3-ORb">
